solve some layout issues

--- a/code/style.css
+++ b/code/style.css
@@ -20,12 +20,12 @@ h1,
 h2 {
   font-family: 'Dancing Script', cursive;
   margin: 0;
-  padding-block: 1em;
+  padding-bottom: 1em;
   text-align: center;
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 2.5rem;
 }
 
 h2 {
@@ -52,18 +52,19 @@ button,
   text-transform: uppercase;
 }
 
+.infotext p {
+  font-family: 'Dancing Script', cursive;
+  font-size: 1.125em;
+  text-align: center;
+  line-height: 1.6em;
+  letter-spacing: 1.5px;
+}
+
 .accordion h3,
 .accordion p {
   color: #222222;
 }
 
-.infotext p {
-  font-family: 'Dancing Script', cursive;
-  font-size: 1.275em;
-  text-align: center;
-  line-height: 1.6em;
-  letter-spacing: 1.5px;
-}
 
 /* ----------- BUTTONS AND LINKS ----------- */
 
@@ -83,7 +84,7 @@ button::after {
   position: absolute;
   bottom: 0.8rem;
   left: 2.125em;
-  width: 70%;
+  width: 75%;
   height: 0.1em;
   background-color: #b88495;
   opacity: 1; 
@@ -140,7 +141,7 @@ header {
 /* ----------- MODAL ----------- */
 /*hide on mobile?*/
 .info-modal {
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.6);
   padding: 2em;
   display: flex;
   flex-direction: column;
@@ -175,6 +176,8 @@ header {
   align-items: center;
   padding: 2em;
 }
+
+
 
 /* ----------- INTRO SECTION ----------- */
 
@@ -252,7 +255,6 @@ textarea {
 
 .accordion {
   background: #929292;
-  padding-bottom: 3.5em;
 }
 
 .accordion-container {
@@ -310,6 +312,7 @@ this can be used for the FAQ-accordion. read more here: https://www.w3schools.co
 
 .gallery {
   background: #333333;
+  padding-top: 2.5em;
 }
 
 .gallery-images {
@@ -333,8 +336,10 @@ img:hover {
 } 
 
 
-
+/* ----------- GALLERY SECTION ----------- */
 
 @media (min-width: 768px) {
+  .desktop-container {
 
+  }
 }
